--- a/index.html
+++ b/index.html
@@ -4,17 +4,31 @@
     <title>The AJAXson 5</title>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="request-gif.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+
+    <meta name = "viewport" content = "width=device-width, initial-scale-1">
 </head>
 <body>
-    <h1>The AJAXson 5</h1>
+    <div class = "container-fluid">
+        <div class = "jumbotron"><h1>The AJAXson 5</h1></div>
 
-    <form id="form-gif-request" />
-        <label>What kind of Jackson 5 related gif do you want?</label>
-        <input name="tag" type="text"/>
-        <input type="submit" value="Get my Gif!" />
+    <form class = "form-horizontal" id="form-gif-request" />
+        <div class = "form-group row"><label>What kind of Jackson 5 related gif do you want?
+        <input class = "form-control" name="tag" type="text"/></label></div>
+
+        <div class = "form-group well" id = "validate">
+        <div class = "form-group row"><label class = "control-label">Prove you are not a robot by answering this riddle:</label></div>
+    <div class = "input-group">   <input class = "form-control" id = "howMany" name = "notRobot" type= "text"/ aria-describedby="addon"><span class = "input-group-addon" id="addon">Jacksons are better than 1</span>
+    </div>
+        <p id = "error" class = "help-block"></p>
+</div>
+<div class = "row"><input class = "btn btn-primary" type="submit" value="Get my Gif!" /></DIV>
     </form>
 
     <img id="gif" src="" hidden="true"/>
+
     <p id="feedback" hidden="true`"></p>
 
 </body>
